<resources>
    <string name="app_name">SampleTest</string>
    <string name="web_client_id">Include your web client id here</string>
    <string name="sign_in">FIREBASE GOOGLE\n \nAUTHENTICATION</string>
    <string name="empty">""</string>
    <string name="are_you_sure_do_you_want_to_logout">Are you sure do you want to logout ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="home">Home</string>
    <string name="video_page">Video Page</string>
    <string name="related">Related...</string>
    <string name="play_videos">Play Videos</string>
</resources>
