<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    android:minWidth="@dimen/threetwenty_dp"
    app:cardCornerRadius="@dimen/ten_dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="@dimen/ten_dp"
        android:paddingEnd="@dimen/ten_dp"
        android:minHeight="@dimen/hundred_dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/ten_dp"
            android:paddingTop="@dimen/ten_dp"
            android:text="@string/are_you_sure_do_you_want_to_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/no"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="@dimen/fifty_dp"
            android:padding="@dimen/ten_dp"
            android:text="@string/no"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"
            app:layout_constraintBottom_toBottomOf="@+id/yes"
            app:layout_constraintEnd_toStartOf="@+id/yes"
            app:layout_constraintTop_toTopOf="@+id/yes" />

        <TextView
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:gravity="center"
            android:minWidth="@dimen/fifty_dp"
            android:padding="@dimen/ten_dp"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>