<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_blue"
    tools:context=".Activities.VideoDetailsActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ltParent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/appbarlayout_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/home_blue"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_page"
                android:textColor="@color/white"
                android:textSize="@dimen/twenty_sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/ltParent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlPostImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/two_fourty_dp">
        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivVideoThumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:contentDescription="@string/empty"
            android:src="@drawable/default_thumbnail" />
        <ImageView
            android:layout_width="@dimen/fifty_dp"
            android:layout_height="@dimen/fifty_dp"
            android:id="@+id/iv_control"
            android:contentDescription="@string/empty"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_play_button"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ltTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/ten_dp">

        <TextView
            android:id="@+id/tvVideoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvVideoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/twelve_sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvRelated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/related"
        android:layout_margin="@dimen/ten_dp"
        android:textColor="@color/white"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvRelatedVideos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>